# X50C

./: .gitmodules  README.md
LinkSDK-MQTT5-PSK/: ChangeLog.md
X8UIGCZ01协议/: README.md  update.dio  x8ota.dio  x8ota_comm.dio  协议简介.md  通讯流程.md
alink/: DevProfile.json  DevQuad.json  Recipes.json  X50BCZ.json  alinkapp  liblinktool  makefile
alinksdk/: .config  make.settings
liblinktool/: CMakeLists.txt  makefile
liblinktool/install/include/tcp/: select_server.h
liblinktool/tcp/: tcp.c  tcp.h  tcp_uds.c
liblinktool/tcp/epoll/: epollClient.c
liblinktool/tcp/select/: select_server.c
liblinktool/tcp/select/example/: select_tcp_server.c  select_tcp_server.h
liblinktool/tcp/thread/: thread2Client.c  thread2Client.h
liblinktool/timer/: POSIXTimer.c
liblinktool/tool/: UartCfg.c  UartCfg.h  cmd_run.c  commonFunc.c  commonFunc.h  logFunc.h  networkFunc.c  socketFunc.c
sdk/: BoardConfig_32bit.mk  BoardConfig_RK3308BS_32bit.mk  RkEnv.sh  RkLunch.sh  S50sshd  X50BCZ-buildroot.config  X50BCZ-kernel.config  parameter-32bit.txt  passwd  rk3308_defconfig  rk3308_linux_defconfig  sshd_config  x8gcz.config  x8gcz_kernel.config  x8gcz_minigui.config  x8gcz_uboot.config
x50/: DevProfile.json  DevQuad.json  README.md  Recipes.json  RecipesDetails.json  X50Panguapp  X50app  alinkapp  clear.sh  delquad.sh  fit.py  makefile  rename.sh  x50_log.conf  x50app  x50zlog.conf
x50UI协议/: X50详细架构.md  cook.dio  history_inster.dio  history_update.dio  quad.dio  公有属性表.md  协议简介.md  阿里云四元组烧录.md
x8/: DevProfile.json  DevQuad.json  Makefile  README.md  Recipes.json  X8Iceapp  X8app  (+3 more)
(+560 files in other folders)
